# robotframework-analysis

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  README.md  pyproject.toml  tasks.py  tmp_probe_output.xml
.github/skills/tdd/: SKILL.md
.github/skills/unitest/: SKILL.md
.github/workflows/: ci.yml
docs/adr/: 0001-playwright-event-correlation-policy.md  0002-matched-by-evidence-contract.md  0003-screenshot-analyst-design.md  0004-app-log-server-health-metadata-instead-of-per-event-provenance.md  0005-app-log-file-selection-from-directory.md  0006-app-log-test-name-fallback-for-pabot-merged-ids.md
src/robotframework_analysis/: __init__.py  __init__.py,cover  cli.py  report_markdown.py  report_markdown.py,cover
src/robotframework_analysis/agent/: __init__.py  app_log_analyst.py  delegate.py  failure_analyst.py  ocr.py  playwright_log_analyst.py  screenshot_analyst.py
src/robotframework_analysis/artifacts/: __init__.py  bundle.py  fetcher.py
src/robotframework_analysis/mcp/: __init__.py
src/robotframework_analysis/mcp/app_log/: file_selector.py  log_parser.py  server.py
src/robotframework_analysis/mcp/playwright/: log_parser.py  server.py
src/robotframework_analysis/mcp/results/: __init__.py  models.py  results_analysis.py  server.py
tests/: conftest.py  test_app_log_analyst.py  test_app_log_analyst.test_analyze_app_log_failures_approval.approved.txt  test_app_log_file_selector.py  test_app_log_mcp_server.py  test_app_log_mcp_server.test_get_events_approval.approved.json  test_app_log_mcp_server.test_get_http_approval.approved.json  test_app_log_parser.py  test_artifact_fetcher.py  test_cli.py  test_delegate.py  test_failure_analyst.py  test_failure_analyst.test_analyze_failures_approval.approved.txt  test_markdown_approval.py  test_markdown_approval.test_detail_file_error_groups_database_error_one.approved.md  test_markdown_approval.test_detail_file_error_groups_database_error_two.approved.md  test_markdown_approval.test_detail_file_error_groups_login_timeout.approved.md  test_markdown_approval.test_detail_file_error_groups_printed_failure.approved.md  test_markdown_approval.test_detail_file_error_groups_setup_failure_case.approved.md  test_markdown_approval.test_detail_file_error_groups_teardown_failure_case.approved.md  test_markdown_approval.test_detail_file_summary_suite_failing.approved.md  test_markdown_approval.test_renders_all_passing_markdown.approved.md  test_markdown_approval.test_renders_error_groups_markdown.approved.md  test_markdown_approval.test_renders_suite_setup_failure_markdown.approved.md  test_markdown_approval.test_renders_suite_teardown_failure_markdown.approved.md  test_markdown_approval.test_renders_summary_markdown.approved.md  test_ocr.py  test_playwright_log_analyst.py  test_playwright_log_analyst.test_analyze_playwright_failures_approval.approved.txt  test_playwright_log_parser.py  test_playwright_mcp_server.py  test_playwright_mcp_server.test_get_errors_approval.approved.json  test_playwright_mcp_server.test_get_events_approval.approved.json  test_results_analysis.py  test_results_analysis.test_detail_error_groups_database_error_one.approved.json  test_results_analysis.test_detail_error_groups_database_error_two.approved.json  test_results_analysis.test_detail_error_groups_login_timeout.approved.json  test_results_analysis.test_detail_error_groups_printed_failure.approved.json  test_results_analysis.test_detail_error_groups_setup_failure_case.approved.json  test_results_analysis.test_detail_error_groups_teardown_failure_case.approved.json  (+10 more)
tests/fixtures/: all_passing_suite.robot  error_groups_keywords.resource  error_groups_suite.robot  nested_keywords.resource  playwright-log-slice.txt  screenshot_suite.robot  suite_setup_failure_suite.robot  suite_teardown_failure_suite.robot  summary_suite.robot  test_library.py
