[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-analysis"
version = "0.1.0"
description = "Use LLM to analyze Robot Framework test suites, logs from SUT and changelogs to find out what is going on and how to fix it."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "pydantic-ai>=1.72.0",
    "robotframework>=7.1.1",
]

[project.optional-dependencies]
dev = [
    "approvaltests>=15.3.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "E",
    "F",
    "FAST",
    "FLY",
    "FURB",
    "I",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "N",
    "UP",
    "PERF",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SLF",
    "SIM",
    "TC",
    "TID",
    "T100",
    "UP",
    "W"
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S",
    "PLC",
    "PLR",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=robotframework_analysis --cov-report=term-missing"
pythonpath = [
  "src"
]


[tool.coverage.run]
source = ["robotframework_analysis"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
strict = true

[[tool.mypy.overrides]]
module = ["robot", "robot.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "approvaltests>=17.4.3",
    "invoke>=3.0.3",
    "mutmut>=3.5.0",
    "mypy>=1.20.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
